testing/error/error3.inp
* B BETA GAMMA III III ABCD
FROM his shoulder Hiawatha
Took the camera of rosewood
